<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".StartFragment">

    <data>
        <variable
            name="startFragment"
            type="com.whitneygoodey.pizza.StartFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <Button
                android:id="@+id/small_pizza_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:minWidth="250dp"
                android:onClick="@{() -> startFragment.nextScreen(@string/small)}"
                android:text="@string/small"/>

            <Button
                android:id="@+id/medium_pizza_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="@dimen/vertical_space"
                android:minWidth="250dp"
                android:onClick="@{() -> startFragment.nextScreen(@string/medium)}"
                android:text="@string/medium"/>

            <Button
                android:id="@+id/large_pizza_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:minWidth="250dp"
                android:onClick="@{() -> startFragment.nextScreen(@string/large)}"
                android:text="@string/large"/>

        </LinearLayout>

    </ScrollView>

</layout>