<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ToppingsFragment">

    <data>
        <variable
            name="toppingsFragment"
            type="com.whitneygoodey.pizza.ToppingsFragment" />
        <variable
            name="viewModel"
            type="com.whitneygoodey.pizza.model.OrderViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/side_margin">

            <TextView
                android:id="@+id/info_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@{@string/toppings_info(viewModel.getCostOfExtras)}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Select as many toppings as you want. \nNote: adding extra costs $0.50 more per topping."/>


            <CheckBox
                android:id="@+id/cheese_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cheese"
                android:checked="@{viewModel.hasTopping(@string/cheese)}"
                app:layout_constraintTop_toBottomOf="@id/info_text_view"
                app:layout_constraintStart_toStartOf="parent"/>

            <CheckBox
                android:id="@+id/pepperoni_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pepperoni"
                android:checked="@{viewModel.hasTopping(@string/pepperoni)}"
                app:layout_constraintTop_toBottomOf="@id/cheese_box"
                app:layout_constraintStart_toStartOf="parent"/>

            <CheckBox
                android:id="@+id/sausage_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sausage"
                android:checked="@{viewModel.hasTopping(@string/sausage)}"
                app:layout_constraintTop_toBottomOf="@id/pepperoni_box"
                app:layout_constraintStart_toStartOf="parent"/>

            <CheckBox
                android:id="@+id/bacon_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bacon"
                android:checked="@{viewModel.hasTopping(@string/bacon)}"
                app:layout_constraintTop_toBottomOf="@id/sausage_box"
                app:layout_constraintStart_toStartOf="parent"/>

            <CheckBox
                android:id="@+id/anchovies_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anchovies"
                android:checked="@{viewModel.hasTopping(@string/anchovies)}"
                app:layout_constraintTop_toBottomOf="@id/bacon_box"
                app:layout_constraintStart_toStartOf="parent"/>


            <CheckBox
                android:id="@+id/mushrooms_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mushrooms"
                android:checked="@{viewModel.hasTopping(@string/anchovies)}"
                app:layout_constraintTop_toBottomOf="@id/anchovies_box"
                app:layout_constraintStart_toStartOf="parent"/>

            <CheckBox
                android:id="@+id/peppers_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/peppers"
                android:checked="@{viewModel.hasTopping(@string/peppers)}"
                app:layout_constraintTop_toBottomOf="@id/mushrooms_box"
                app:layout_constraintStart_toStartOf="parent"/>

            <CheckBox
                android:id="@+id/artichokes_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/artichokes"
                android:checked="@{viewModel.hasTopping(@string/artichokes)}"
                app:layout_constraintTop_toBottomOf="@id/peppers_box"
                app:layout_constraintStart_toStartOf="parent"/>



            <View
                android:id="@+id/vertical_divider"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_marginHorizontal="@dimen/vertical_space"
                app:layout_constraintTop_toBottomOf="@+id/info_text_view"
                app:layout_constraintBottom_toBottomOf="@id/artichokes_box"
                app:layout_constraintStart_toEndOf="@id/artichokes_box"/>


            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/extra_cheese_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/vertical_space"
                android:checked="@{viewModel.hasExtraTopping(@string/cheese)}"
                app:layout_constraintBaseline_toBaselineOf="@id/cheese_box"
                app:layout_constraintStart_toEndOf="@id/vertical_divider"
                android:text="@string/extra"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/extra_pepperoni_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.hasExtraTopping(@string/pepperoni)}"
                app:layout_constraintBaseline_toBaselineOf="@id/pepperoni_box"
                app:layout_constraintStart_toStartOf="@id/extra_cheese_switch"
                android:text="@string/extra"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/extra_sausage_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.hasExtraTopping(@string/sausage)}"
                app:layout_constraintBaseline_toBaselineOf="@id/sausage_box"
                app:layout_constraintStart_toStartOf="@id/extra_cheese_switch"
                android:text="@string/extra"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/extra_bacon_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.hasExtraTopping(@string/bacon)}"
                app:layout_constraintBaseline_toBaselineOf="@id/bacon_box"
                app:layout_constraintStart_toStartOf="@id/extra_cheese_switch"
                android:text="@string/extra"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/extra_anchovies_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.hasExtraTopping(@string/anchovies)}"
                app:layout_constraintBaseline_toBaselineOf="@id/anchovies_box"
                app:layout_constraintStart_toStartOf="@id/extra_cheese_switch"
                android:text="@string/extra"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/extra_mushrooms_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.hasExtraTopping(@string/mushrooms)}"
                app:layout_constraintBaseline_toBaselineOf="@id/mushrooms_box"
                app:layout_constraintStart_toStartOf="@id/extra_cheese_switch"
                android:text="@string/extra"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/extra_peppers_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.hasExtraTopping(@string/peppers)}"
                app:layout_constraintBaseline_toBaselineOf="@id/peppers_box"
                app:layout_constraintStart_toStartOf="@id/extra_cheese_switch"
                android:text="@string/extra"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/extra_artichokes_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.hasExtraTopping(@string/artichokes)}"
                app:layout_constraintBaseline_toBaselineOf="@id/artichokes_box"
                app:layout_constraintStart_toStartOf="@id/extra_cheese_switch"
                android:text="@string/extra"/>


            <View
                android:id="@+id/group_divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginVertical="@dimen/vertical_space"
                app:layout_constraintTop_toBottomOf="@+id/artichokes_box"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>



            <TextView
                android:id="@+id/subtotal_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/vertical_space"
                app:layout_constraintTop_toBottomOf="@id/group_divider"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@{viewModel.cost.toString()}"
                tools:text="$10.00"/>

            <Button
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> toppingsFragment.goToNextScreen()}"
                android:text="@string/next"
                android:layout_marginVertical="@dimen/vertical_space"
                app:layout_constraintTop_toBottomOf="@id/subtotal_text_view"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> toppingsFragment.cancelOrder()}"
                android:text="@string/cancel"
                app:layout_constraintBaseline_toBaselineOf="@id/next_button"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>