<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AddressFragment">

    <data>
        <variable
            name="addressFragment"
            type="com.whitneygoodey.pizza.AddressFragment" />
        <variable
            name="viewModel"
            type="com.whitneygoodey.pizza.model.OrderViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/vertical_space">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="@{viewModel.name}"
                    android:onTextChanged="@{(text, start, before, count) -> viewModel.setName(text.toString())}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/address_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:layout_marginVertical="@dimen/vertical_space"
                app:layout_constraintTop_toBottomOf="@id/name_text_field"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPostalAddress"
                    android:text="@{viewModel.address}"
                    android:onTextChanged="@{(text, start, before, count) -> viewModel.setAddress(text.toString())}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/city_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/city"
                android:layout_marginVertical="@dimen/vertical_space"
                app:layout_constraintTop_toBottomOf="@id/address_text_field"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="@{viewModel.city}"
                    android:onTextChanged="@{(text, start, before, count) -> viewModel.setCity(text.toString())}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/zip_text_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/zip"
                android:layout_marginVertical="@dimen/vertical_space"
                app:layout_constraintTop_toBottomOf="@id/city_text_field"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="5"
                    android:text="@{viewModel.zip}"
                    android:onTextChanged="@{(text, start, before, count) -> viewModel.setZip(text.toString())}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_text_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:layout_marginVertical="@dimen/vertical_space"
                app:layout_constraintTop_toBottomOf="@id/zip_text_field"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:text="@{viewModel.phone}"
                    android:onTextChanged="@{(text, start, before, count) -> viewModel.setPhone(text.toString())}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:id="@+id/group_divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginVertical="@dimen/vertical_space"
                app:layout_constraintTop_toBottomOf="@id/phone_text_field"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <Button
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> addressFragment.goToNextScreen()}"
                android:text="@string/next"
                android:layout_marginVertical="@dimen/vertical_space"
                app:layout_constraintTop_toBottomOf="@id/group_divider"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> addressFragment.cancelOrder()}"
                android:text="@string/cancel"
                app:layout_constraintBaseline_toBaselineOf="@id/next_button"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>