<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/startFragment">

    <fragment
        android:id="@+id/startFragment"
        android:name="com.whitneygoodey.pizza.StartFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_start" >
        <action
            android:id="@+id/action_startFragment_to_baseFragment"
            app:destination="@id/baseFragment" />
    </fragment>
    <fragment
        android:id="@+id/baseFragment"
        android:name="com.whitneygoodey.pizza.BaseFragment"
        android:label="@string/select_base"
        tools:layout="@layout/fragment_base" >
        <action
            android:id="@+id/action_baseFragment_to_toppingsFragment"
            app:destination="@id/toppingsFragment" />
    </fragment>
    <fragment
        android:id="@+id/toppingsFragment"
        android:name="com.whitneygoodey.pizza.ToppingsFragment"
        android:label="@string/select_toppings"
        tools:layout="@layout/fragment_toppings" >
        <action
            android:id="@+id/action_toppingsFragment_to_pickupFragment"
            app:destination="@id/pickupFragment" />
    </fragment>
    <action
        android:id="@+id/action_global_startFragment"
        app:destination="@id/startFragment"
        app:popUpTo="@id/startFragment"
        app:popUpToInclusive="true" />
    <fragment
        android:id="@+id/pickupFragment"
        android:name="com.whitneygoodey.pizza.PickupFragment"
        android:label="Select pickup time"
        tools:layout="@layout/fragment_pickup" >
        <action
            android:id="@+id/action_pickupFragment_to_summaryFragment"
            app:destination="@id/summaryFragment" />
        <action
            android:id="@+id/action_pickupFragment_to_addressFragment"
            app:destination="@id/addressFragment" />
    </fragment>
    <fragment
        android:id="@+id/addressFragment"
        android:name="com.whitneygoodey.pizza.AddressFragment"
        android:label="Contact information"
        tools:layout="@layout/fragment_address" >
        <action
            android:id="@+id/action_addressFragment_to_summaryFragment"
            app:destination="@id/summaryFragment" />
    </fragment>
    <fragment
        android:id="@+id/summaryFragment"
        android:name="com.whitneygoodey.pizza.SummaryFragment"
        android:label="Order Summary"
        tools:layout="@layout/fragment_summary" />
</navigation>